; ModuleID = '/home/carl/AnghaBench/linux/tools/perf/tests/extr_bp_account.c_detect_cnt.c'
source_filename = "/home/carl/AnghaBench/linux/tools/perf/tests/extr_bp_account.c_detect_cnt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.perf_event_attr = type { i32 }

@test_function = common dso_local global i64 0, align 8
@the_var = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [44 x i8] c"way too many debug registers, fix the test\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @detect_cnt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @detect_cnt(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.perf_event_attr, align 4
  %5 = alloca i8*, align 8
  %6 = alloca [100 x i32], align 16
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %9 = load i32, i32* %3, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %14

11:                                               ; preds = %1
  %12 = load i64, i64* @test_function, align 8
  %13 = inttoptr i64 %12 to i8*
  br label %15

14:                                               ; preds = %1
  br label %15

15:                                               ; preds = %14, %11
  %16 = phi i8* [ %13, %11 ], [ bitcast (i32* @the_var to i8*), %14 ]
  store i8* %16, i8** %5, align 8
  store i32 0, i32* %7, align 4
  br label %17

17:                                               ; preds = %15, %35
  %18 = load i32, i32* %7, align 4
  %19 = icmp eq i32 %18, 100
  br i1 %19, label %20, label %22

20:                                               ; preds = %17
  %21 = call i32 @pr_debug(i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %2, align 4
  br label %54

22:                                               ; preds = %17
  %23 = load i32, i32* %3, align 4
  %24 = load i8*, i8** %5, align 8
  %25 = call i32 @__event(i32 %23, i8* %24, %struct.perf_event_attr* %4)
  %26 = load i32, i32* %7, align 4
  %27 = sext i32 %26 to i64
  %28 = getelementptr inbounds [100 x i32], [100 x i32]* %6, i64 0, i64 %27
  store i32 %25, i32* %28, align 4
  %29 = load i32, i32* %7, align 4
  %30 = sext i32 %29 to i64
  %31 = getelementptr inbounds [100 x i32], [100 x i32]* %6, i64 0, i64 %30
  %32 = load i32, i32* %31, align 4
  %33 = icmp slt i32 %32, 0
  br i1 %33, label %34, label %35

34:                                               ; preds = %22
  br label %38

35:                                               ; preds = %22
  %36 = load i32, i32* %7, align 4
  %37 = add nsw i32 %36, 1
  store i32 %37, i32* %7, align 4
  br label %17

38:                                               ; preds = %34
  store i32 0, i32* %8, align 4
  br label %39

39:                                               ; preds = %49, %38
  %40 = load i32, i32* %8, align 4
  %41 = load i32, i32* %7, align 4
  %42 = icmp slt i32 %40, %41
  br i1 %42, label %43, label %52

43:                                               ; preds = %39
  %44 = load i32, i32* %8, align 4
  %45 = sext i32 %44 to i64
  %46 = getelementptr inbounds [100 x i32], [100 x i32]* %6, i64 0, i64 %45
  %47 = load i32, i32* %46, align 4
  %48 = call i32 @close(i32 %47)
  br label %49

49:                                               ; preds = %43
  %50 = load i32, i32* %8, align 4
  %51 = add nsw i32 %50, 1
  store i32 %51, i32* %8, align 4
  br label %39

52:                                               ; preds = %39
  %53 = load i32, i32* %7, align 4
  store i32 %53, i32* %2, align 4
  br label %54

54:                                               ; preds = %52, %20
  %55 = load i32, i32* %2, align 4
  ret i32 %55
}

declare dso_local i32 @pr_debug(i8*) #1

declare dso_local i32 @__event(i32, i8*, %struct.perf_event_attr*) #1

declare dso_local i32 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
